--- a/common/dependencies.gradle
+++ b/common/dependencies.gradle
@@ -1,9 +1,33 @@
 ext {
-    kotlin_version = '1.4.0'
-    kotlin_stdlib = "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    core_ktx = "androidx.core:core-ktx:1.3.2"
+    kotlin_stdlib = "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.0"
+    kotlin_coroutines_core = "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1"
+    kotlin_coroutines_android = "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1"
     appcompat = "androidx.appcompat:appcompat:1.2.0"
+    activity_ktx = "androidx.activity:activity-ktx:1.1.0"
+    fragment_ktx = "androidx.fragment:fragment-ktx:1.2.5"
+    viewmodel_ktx = "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    livedata_ktx = "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+    work_ktx = "androidx.work:work-runtime-ktx:2.4.0"
+    room_ktx = "androidx.room:room-ktx:2.2.5"
+    room_compiler = "androidx.room:room-compiler:2.2.5"
+    startup = "androidx.startup:startup-runtime:1.0.0"
+    viewpager2 = "androidx.viewpager2:viewpager2:1.0.0"
     constraintlayout = "androidx.constraintlayout:constraintlayout:2.0.4"
+    recyclerview = "androidx.recyclerview:recyclerview:1.1.0"
     mmkv = "com.tencent:mmkv-static:1.2.4"
     timber = "com.jakewharton.timber:timber:4.7.1"
+    utdid = "com.taobao.android:utdid4all:1.1.5"
+    lottie = "com.airbnb.android:lottie:3.5.0"
+    smartrefreshlayout = "com.scwang.smart:refresh-layout-kernel:2.0.1"
+    smartrefreshlayout_header = "com.scwang.smart:refresh-header-classics:2.0.1"
+    smartrefreshlayout_footer = "com.scwang.smart:refresh-footer-classics:2.0.1"
+    retrofit = "com.squareup.retrofit2:retrofit:2.9.0"
+    retrofit_moshi = "com.squareup.retrofit2:converter-moshi:2.9.0"
+    logging_interceptor = "com.squareup.okhttp3:logging-interceptor:4.7.2"
+    moshi = "com.squareup.moshi:moshi-kotlin:1.11.0"
+    moshi_kapt = "com.squareup.moshi:moshi-kotlin-codegen:1.11.0"
+    glide = "com.github.bumptech.glide:glide:4.11.0"
+    gilde_kapt = "com.github.bumptech.glide:compiler:4.11.0"
+    glide_okhttp = "com.github.bumptech.glide:okhttp3-integration:4.11.0"
+    multidex = "androidx.multidex:multidex:2.0.1"
 }
