--- a/common/build.gradle
+++ b/common/build.gradle
@@ -4,6 +4,12 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply from: 'dependencies.gradle'
 
+kapt {
+    arguments {
+        arg("AROUTER_MODULE_NAME", project.getName())
+    }
+}
+
 android {
     compileSdkVersion 29
     buildToolsVersion "30.0.2"
@@ -23,12 +29,22 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
 }
 
 dependencies {
     api kotlin_stdlib
     api kotlin_coroutines_core
     api kotlin_coroutines_android
+    api material
     api appcompat
     api activity_ktx
     api fragment_ktx
@@ -57,4 +73,6 @@ dependencies {
     kapt gilde_kapt
     api glide_okhttp
     api multidex
+    api arouter
+    kapt arouter_compiler
 }
