--- a/common/dependencies.gradle
+++ b/common/dependencies.gradle
@@ -2,6 +2,7 @@ ext {
     kotlin_stdlib = "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.0"
     kotlin_coroutines_core = "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1"
     kotlin_coroutines_android = "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1"
+    material = "com.google.android.material:material:1.3.0-alpha03"
     appcompat = "androidx.appcompat:appcompat:1.2.0"
     activity_ktx = "androidx.activity:activity-ktx:1.1.0"
     fragment_ktx = "androidx.fragment:fragment-ktx:1.2.5"
@@ -30,4 +31,6 @@ ext {
     gilde_kapt = "com.github.bumptech.glide:compiler:4.11.0"
     glide_okhttp = "com.github.bumptech.glide:okhttp3-integration:4.11.0"
     multidex = "androidx.multidex:multidex:2.0.1"
+    arouter = "com.alibaba:arouter-api:1.5.1"
+    arouter_compiler = "com.alibaba:arouter-compiler:1.5.1"
 }
