--- a/news/build.gradle
+++ b/news/build.gradle
@@ -1,8 +1,8 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply from: '../common/dependencies.gradle'
 apply plugin: 'kotlin-kapt'
+apply from: '../common/dependencies.gradle'
 
 kapt {
     arguments {
@@ -15,15 +15,13 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.sec.fizz"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
-        manifestPlaceholders = [
-                APP_NAME      : "Fizz"
-        ]
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -46,5 +44,4 @@ android {
 dependencies {
     kapt arouter_compiler
     implementation project(path: ':common')
-    implementation project(path: ':news')
 }
