--- a/common/dependencies.gradle
+++ b/common/dependencies.gradle
@@ -16,7 +16,7 @@ ext {
     startup = "androidx.startup:startup-runtime:1.0.0"
     viewpager2 = "androidx.viewpager2:viewpager2:1.0.0"
     constraintlayout = "androidx.constraintlayout:constraintlayout:2.0.4"
-    recyclerview = "androidx.recyclerview:recyclerview:1.1.0"
+    recyclerview = "androidx.recyclerview:recyclerview:1.2.0-alpha05"
     mmkv = "com.tencent:mmkv-static:1.2.4"
     timber = "com.jakewharton.timber:timber:4.7.1"
     utdid = "com.taobao.android:utdid4all:1.1.5"
