--- a/common/dependencies.gradle
+++ b/common/dependencies.gradle
@@ -26,12 +26,11 @@ ext {
     smartrefreshlayout_footer = "com.scwang.smart:refresh-footer-classics:2.0.1"
     retrofit = "com.squareup.retrofit2:retrofit:2.9.0"
     retrofit_moshi = "com.squareup.retrofit2:converter-moshi:2.9.0"
-    logging_interceptor = "com.squareup.okhttp3:logging-interceptor:4.7.2"
+    okhttp = "com.squareup.okhttp3:okhttp:4.9.0"
+    okhttp_logging_interceptor = "com.squareup.okhttp3:logging-interceptor:4.9.0"
     moshi = "com.squareup.moshi:moshi-kotlin:1.11.0"
     moshi_kapt = "com.squareup.moshi:moshi-kotlin-codegen:1.11.0"
-    glide = "com.github.bumptech.glide:glide:4.11.0"
-    gilde_kapt = "com.github.bumptech.glide:compiler:4.11.0"
-    glide_okhttp = "com.github.bumptech.glide:okhttp3-integration:4.11.0"
+    coil = "io.coil-kt:coil:1.0.0"
     multidex = "androidx.multidex:multidex:2.0.1"
     arouter = "com.alibaba:arouter-api:1.5.1"
     arouter_compiler = "com.alibaba:arouter-compiler:1.5.1"
